--- a/generator_cli.csproj
+++ b/generator_cli.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.0.1</Version> 
+    <Version>1.0.4</Version> 
+    <RootNamespace>generator_cli</RootNamespace>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
